# retail_data_pipeline_walmart

./: .env.example  .gitignore  config.py  docker-compose.yml  main.py  pyproject.toml  readme.md
docs/: reqirements.md
pipeline/: aggregate.py  extract.py  load.py  main.py  transform.py  validation.py
tests/: test_aggregate.py  test_extract.py  test_load.py  test_transform.py  test_validation.py
