[project]
name = "retail-data-pipeline-walmart"
version = "0.1.0"
package-mode = false
description = "Retail data processing pipeline for Walmart"
authors = [
    { name = "NebylytsiaKyrylo", email = "knebylytsia.it@gmail.com" }
]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
